--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,12 +14,12 @@
       
       <ion-item>
         <ion-label position="floating">Correo electrónico</ion-label>
-        <ion-input type="email"></ion-input>
+        <ion-input type="email" [(ngModel)]="user"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password"></ion-input>
+        <ion-input type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
 
       <ion-button expand="full" (click)="iniciarSesion()">Iniciar sesión</ion-button>
