--- a/src/app/info-offer/info-offer.page.html
+++ b/src/app/info-offer/info-offer.page.html
@@ -14,12 +14,12 @@
   <ion-card>
     <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
     <ion-card-header>
-      <ion-card-title>Card Title</ion-card-title>
+      <ion-card-title>{{discover?.precio}} €</ion-card-title>
       <ion-card-subtitle>{{discover?.nombre}}</ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      {{discover?.descripcion}}
     </ion-card-content>
     <ion-card-content>
       <b>Begin Date</b>
@@ -31,7 +31,7 @@
     <ion-datetime presentation="date"></ion-datetime>
   </ion-card>
 
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end" (click)="openEditPage(discover)">
     <ion-fab-button>
       <ion-icon name="pencil-outline"></ion-icon>
     </ion-fab-button>
