--- a/src/app/offers/offers.page.html
+++ b/src/app/offers/offers.page.html
@@ -26,7 +26,7 @@
         <ion-label>{{offer.nombre}}</ion-label>
       </ion-item>
       <ion-item-options slot="end">
-        <ion-item-option color="tertiary" (click)="openInfoPage()">
+        <ion-item-option color="tertiary" (click)="openInfoPage(offer)">
           <ion-icon slot="icon-only" name="construct"></ion-icon>
         </ion-item-option>
         <ion-item-option color="danger" expandable="true" (click)="borrar(offer.nombre)">
