--- a/src/app/edit-offer/edit-offer.page.html
+++ b/src/app/edit-offer/edit-offer.page.html
@@ -14,7 +14,7 @@
 
   <ion-card>
     <div id="imageSelector">
-      <img *ngIf="discover.imagen" alt="Silhouette of mountains" [src]="discover.imagen" />
+      <img *ngIf="discover.imagen" alt="Silhouette of mountains" src="..\assets\icon\favicon.png" />
       <img *ngIf="!discover.imagen" alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
     </div>
     <ion-card-header>
