--- a/src/app/info-offer/info-offer.page.html
+++ b/src/app/info-offer/info-offer.page.html
@@ -12,23 +12,14 @@
   </ion-header>
 
   <ion-card>
-    <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+    <img src="{{discover?.imagen}}" />
     <ion-card-header>
       <ion-card-title>{{discover?.precio}} €</ion-card-title>
       <ion-card-subtitle>{{discover?.nombre}}</ion-card-subtitle>
     </ion-card-header>
-  
     <ion-card-content>
       {{discover?.descripcion}}
     </ion-card-content>
-    <ion-card-content>
-      <b>Begin Date</b>
-    </ion-card-content>
-    <ion-datetime presentation="date"></ion-datetime>
-    <ion-card-content>
-      <b>Finish Date</b>
-    </ion-card-content>
-    <ion-datetime presentation="date"></ion-datetime>
   </ion-card>
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="end" (click)="openEditPage(discover)">
