--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -9,13 +9,13 @@
     <ion-content class="ion-padding">
       <ion-list>
         <ion-item>
-          <ion-label>Discover</ion-label>
+          <ion-label (click)="verDiscover()">Discover</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>My Bookings</ion-label>
+          <ion-label (click)="verReservas()">My Bookings</ion-label>
         </ion-item>
         <ion-item>
-          <ion-label>Log out</ion-label>
+          <ion-label (click)="volverInicio()">Log out</ion-label>
         </ion-item>
       </ion-list>
     </ion-content>
