--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,11 +1,11 @@
 <div class="mi-modal">
   <div class="mi-modal-content">
     <div class="mi-modal-header">
-      <span class="mi-modal-close" (click)="cerrarModal()">&times;</span>
-      <h2>Mi Modal</h2>
+      <span class="mi-modal-close" (click)="cerrarModal()" style="color: red;">X</span>
+      <h2>Reserva</h2>
     </div>
     <div class="mi-modal-body">
-      <h2>Confirma tu reserva</h2>
+      <h2 style="color: black;">Se ha realizado tu reserva.</h2>
     </div>
   </div>
 </div>
